# inventify

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  init-letsencrypt.sh  manage.py  pyproject.toml  test.py
apps/address/: admin.py  models.py  serializers.py  urls.py  views.py
apps/car/: admin.py  filters.py  helpers.py  serializers.py  tasks.py  urls.py  views.py
apps/category/: actions.py  admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/order/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
apps/product/: actions.py  admin.py  deserializers.py  eav_serializer.py  enums.py  filters.py  repository.py  serializers.py  tasks.py  urls.py  views.py
apps/stock/: actions.py  admin.py  enums.py  filters.py  models.py  repository.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/supplier/: admin.py  models.py
base/: exception_handler.py  repository.py  requests.py  views.py
base/middlewares/: RequestMiddleware.py
base/services/: get_current_user.py
handbook/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
handbook/migrations/: 0001_initial.py  0002_initial.py  0003_alter_city_uid_alter_country_uid.py  0004_delete_address.py
history/: admin.py
history/migrations/: 0001_initial.py  (+4 more)
inventify/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
product/: admin.py  urls.py  views.py
users/: actions.py  admin.py  fields.py  managers.py  models.py  repository.py  serializers.py  urls.py  views.py
(+127 files in other folders)
